--- a/Style.css
+++ b/Style.css
@@ -3,7 +3,7 @@
     border: 10px solid yellow;
     padding: 40px;
     flex-wrap: wrap;
-    flex-direction: row;
+    flex-direction: column;
     justify-content: space-around;
 }
 .flex-box div{
