--- a/Style2.css
+++ b/Style2.css
@@ -8,10 +8,12 @@
 }
   
   .custom-select select {
-    background-color: orange;
-    color: white;
+    background-color:rgb(136, 145, 156);
+    color: black;
     width: 220;
     height: 45;
+    font-size: 25px;
+
     border-radius: 12px;
     direction: rtl;
   }
@@ -24,10 +26,18 @@
       margin-left: 920px;
 
   }
+  .custom-select2  select{
+    color: white;
+    width: 220;
+    height: 45;
+    margin-top: 0px;
+    margin-left: 920px;
+
+}
   .Search-b {
     color: blueviolet;
-    height: 50px;
-    width: 50px;
+    height: 200px;
+    width: 200px;
 
 
   }
