--- a/Style.css
+++ b/Style.css
@@ -23,4 +23,5 @@
     background-repeat: no-repeat;
     background-position: left;
     background-size: 175px;
+    border-color: rgb(247, 177, 47);
   }
