--- a/Style2.css
+++ b/Style2.css
@@ -3,19 +3,22 @@
     display:  flex;
     padding: 30px;
     flex-wrap: wrap;
+    margin-left: 900px;
+    margin-top: 50px;
     flex-direction: row;
-    margin-left: 800px;
+    
     justify-content: space-around;
 }
   
   .custom-select select {
     background-color:lightgoldenrodyellow;
     color: grey;
-    width: 250px;
-    height: 45px;
+    width: 300px;
+    height: 40px;
     font-size: 25px;
     align-items: center;
     border-radius: 12px;
+    
     direction: rtl;
   }
   
@@ -26,6 +29,7 @@
     width: 250px;
     height: 45px;
     font-size: 25px;
+    
     align-items: center;
     border-radius: 12px;
     direction: rtl;
@@ -36,17 +40,32 @@
     height: 200px;
     width: 200px;
   }
-
   .blessHeader{
-    padding: 5px;
+
+
+    padding: 30px;
     text-align: center;
-    background:/*rgb(248, 248, 132);*/ rgb(247, 177, 47); 
+    background: rgb(247, 177, 47);
+    color: lightyellow;
     font-size: 30px;
+    background-image: url('pictures/logo.png');
     background-repeat: no-repeat;
     background-position: left;
     background-size: 175px;
-    border-color:rgb(247, 177, 47);/*rgb(248, 248, 132);*/
-    color: grey;
-    font-family: Arial, Helvetica, sans-serif;
+    border-color: rgb(247, 177, 47);
+
+
+    /*
+    padding: 60px;
+    text-align: center;
+    background: rgb(247, 177, 47);
+    color: lightyellow;
+    font-size: 30px;
+    background-image: url('pictures/logo.png');
+    background-repeat: no-repeat;
+    background-position: left;
+    background-size: 175px;
+    border-color: rgb(247, 177, 47);
+    font-family: Arial, Helvetica, sans-serif;*/
   }
 
