--- a/Style.css
+++ b/Style.css
@@ -25,7 +25,41 @@
     background-size: 175px;
     border-color: rgb(247, 177, 47);
   }
+  
+  .pic:after {
+    content: "";
+    flex: 0 0 25%;
+    background-repeat: no-repeat;
+    background-size: auto 100%;
+  }
+  .pic:after {
+    background-image: url("pictures/DFS.png");
+    background-position: left center;
+  }
 
+
+  .pic2:after {
+    content: "";
+    flex: 0 0 25%;
+    background-repeat: no-repeat;
+    background-size: auto 100%;
+  }
+  .pic2:after {
+    background-image: url("pictures/dfs-m.png");
+    background-position: left center;
+  }
+
+
+  .pic3:after {
+    content: "";
+    flex: 0 0 25%;
+    background-repeat: no-repeat;
+    background-size: auto 100%;
+  }
+  .pic3:after {
+    background-image: url("pictures/algo-drive.png");
+    background-position: right;
+  }
   .flex-box-res2 {
     padding: 60px;
     text-align: center;
