--- a/Style.css
+++ b/Style.css
@@ -1,12 +1,4 @@
-/*.flex-box{
-    display:  flex;
-    border: 3px solid black;
-    padding: 40px;
-    flex-wrap: wrap;
-    flex-direction: column;
-    justify-content: space-around;
-}
-*/
+
 .flex-box div{
     display: flex;
     padding: 30px;
@@ -29,15 +21,17 @@
   font-size: 500px;
 } */
 
+
   .pic:after {
     content: "";
     flex: 0 0 25%;
     background-repeat: no-repeat;
     background-size: auto 100%;
   }
+
   .pic:after {
-    background-image: url("pictures/DFS.png");
-    background-position: left center;
+    background-image: url("pictures/basic_dfs.jpeg");
+    background-position: right;
   }
   .pic2:after {
     content: "";
@@ -47,7 +41,10 @@
   }
   .pic2:after {
     background-image: url("pictures/dfs-m.png");
-    background-position: left center;
+    background-position: right;
+    background-size: 212px;
+    margin-left: -10px;
+    
   }
   .pic3:after {
     content: "";
@@ -58,6 +55,8 @@
   .pic3:after {
     background-image: url("pictures/algo-drive.png");
     background-position: right;
+    margin-left: 52px;
+    background-size: 212px;
 
   }
   .flex-box-res2 {
